# src/routes.js
@@ -6,8 +6,10 @@ import handlers from "./middlewares/handlers.js";
 
 import InternalServerError from './routes/helper/500.js'
 import NotFound from './routes/helper/404.js'
+import authRouter from './routes/authRouter.js'
 import userRouter from './routes/userRouter.js'
 import productRouter from "./routes/productRouter.js";
+import {verify} from "./controllers/authController.js";
 
 const routes = Router();
 routes.use(order);
@@ -15,8 +17,9 @@ routes.use(hateoas);
 routes.use(handlers);
 routes.use(order);
 
-routes.use("/api/users", userRouter);
-routes.use("/api/products", productRouter);
+routes.use("/login", authRouter);
+routes.use("/api/users", verify, userRouter);
+routes.use("/api/products", verify, productRouter);
 
 routes.use(InternalServerError)
 routes.use(NotFound)
